--- a/force-app/main/default/lwc/mainpageRight/mainpageRight.html
+++ b/force-app/main/default/lwc/mainpageRight/mainpageRight.html
@@ -18,13 +18,13 @@
       </span>
  
    <div if:false={isLoaded} class="">
-     <p style="font-size: 12px; color:rgb(3, 161, 17)">{notfy}</p>
+     <p style="font-size: 12px; color:#75e67f">{notfy}</p>
      <br>
      
    </div>
    <template if:true={forgotpg}>
     <div class="container slds-p-vertical_medium">
-    <lightning-button variant="brand" label="Reset Password" onclick={handleresetLink}> </lightning-button>
+    <lightning-button variant="brand" label="Reset Password now" onclick={handleresetLink}> </lightning-button>
     <lightning-button variant="brand" label="Back" onclick={handleback}> </lightning-button>
   </div>
 
